# maxql

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c
include/maxql/: constants.h  defaults.h  limits.h  types.h
include/maxql/cli/: repl.h
include/maxql/context/: context.h
include/maxql/core/: dyn_array.h  error.h  lexer.h  strbuf.h  strview.h  utf8.h
include/maxql/database/: database.h
include/maxql/engine/: engine.h
include/maxql/engine/dal/: executor.h
include/maxql/engine/ddl/: executor.h  planner.h  types.h  validator.h
include/maxql/engine/dml/: analyzer.h  executor.h  planner.h  types.h  validator.h
include/maxql/index/: btree.h  comparator.h  index.h  index_io.h  index_set.h  index_types.h
include/maxql/lib/: fs.h  mem.h
include/maxql/parser/: ast.h  parser.h  parser_state.h  primitives.h  schema_parser.h
include/maxql/scan/: index_scan.h  row_source.h  scan_types.h  table_scan.h
include/maxql/schema/: schema.h  schema_io.h
include/maxql/serializer/: serializer.h
include/maxql/storage/: storage.h
include/maxql/types/: comparator.h  converter.h  formatter.h  key_compare.h  mapper.h  presentation.h  types.h
include/maxql/view/: output.h  printer.h
src/cli/: repl.c
src/context/: context.c
src/core/: dyn_array.c  error.c  lexer.c  strbuf.c  strview.c  utf8.c
src/database/: database.c
src/engine/: engine.c
src/engine/dal/: executor.c
src/engine/ddl/: executor.c  planner.c  validator.c
src/engine/dml/: analyzer.c  executor.c  planner.c  validator.c
src/index/: btree.c  comparator.c  index.c  index_io.c  index_set.c
src/lib/: fs.c  mem.c
src/parser/: parser.c  primitives.c  schema_parser.c
src/scan/: index_scan.c  table_scan.c
src/schema/: schema.c  schema_io.c
src/serializer/: serializer.c
src/storage/: storage.c
src/types/: comparator.c  converter.c  formatter.c  key_compare.c  mapper.c  presentation.c
src/view/: output.c  printer.c
